# new-gnubg-features

./: .gitignore
gnubg/: .cvsignore  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  Makefile.w32  README  TODO  analysis.c  analysis.h  autogen.sh  backgammon.h  bearoff.c  bearoff.h  bearoffdump  bearoffdump.c  bearoffgammon.c  bearoffgammon.h  boarddim.h  boardpos.c  boardpos.h  boards.xml  commands.inc  common.h  config.h  config.h.in  configure  configure.ac  configure.in  configureWindows.ac  copying.awk  copying.c  credits.c  credits.h  credits.sh  dbprovider.c  dbprovider.h  dice.c  (+153 more)
gnubg-nn/: .cvsignore  ChangeLog  Makefile.am  configure.ac  configure.in  flags.make
gnubg-nn/analyze/: GNUmakefile  Makefile.am  analyze.cc  analyze.h  bgdefs.h  bm.cc  bm.h  bms.cc  bms.h  danalyze.cc  danalyze.h  defs.h  dice_gen.cc  dice_gen.h  equities.cc  equities.h  mec.cc  mec.h  minmax.h  misc.h  player.cc  player.h
gnubg-nn/doc/: .cvsignore  GNUmakefile  Makefile.am  gnubg-nn.texi  version.texi
gnubg-nn/gnubg/: .cvsignore  ChangeLog  GNUmakefile  Makefile.am  bearoffdb.c  bearoffdb.h  bearoffgammon.cc  bearoffgammon.h  br.h  config.h  eggmove.h  eggmoveg.c  eval.c  eval.h  inputs.c  inputs.h  makebear.cc  makegm.cc  mt19937int.c  mt19937int.h  osr.cc  osr.h  positionid.c  positionid.h  pub_eval.c  racebg.cc  racebg.h
gnubg-nn/gnubg/lib/: GNUmakefile  Makefile.am  cache.h  hash.c  hash.h  neuralnet.c  neuralnet.h  nsse.c  sigmoid.h  sse.h
gnubg-nn/m4/: Makefile.am
gnubg-nn/py/: .cvsignore  ChangeLog  GNUmakefile  Makefile.am  bgutil.py  bgutil1.py  cor.py  pygnubg.cc  pygnubg.h  pynets.cc  pynets.h  pytrainer.cc  pytrainer.h  raceinfo.cc  raceinfo.h  stdutil.h
gnubg-nn/sa/: .cvsignore  GNUmakefile  GetOpt.cc  GetOpt.h  Makefile.am  main.cc
gnubg-nn/scripts/: Makefile.am
gnubg-nn/scripts/benchmark/: combineBM.py  perr.py
gnubg-nn/scripts/play/: matchplay.py  playit.py  playpub.py
gnubg-nn/scripts/train/: buildnet.py  getth.py  referr.py  train.py
gnubg/.deps/: gnubg.Tpo
gnubg/autom4te.cache/: output.6  traces.5  traces.6
gnubg/board3d/: BoardDimensions.h  ChangeLog  DrawOGL.c  GLwidget.c  Makefile.am  ModelOGL.c  Occluders.c  PickOGL.c  Shapes.inc  ShimOGL.c  ShimOGL.h  drawboard3d.c  font3d.c  font3dOGL.c  fun3d.h  graph.c  gtkcolour3d.c  inc3d.h  legacyGLinc.h  matrix.c  matrix.h  misc3d.c  model.c  model.h  shadow.c  shapes.inc  tr.c  tr.h  types3d.h  wglBuffer.c  wglBuffer.h  widget3d.c
gnubg/board3d/CVS/: Entries  Repository
gnubg/board3d/Shaders/: basic-fragment.glsl  basic-vertex.glsl  main-fragment.glsl  main-vertex.glsl
gnubg/board3d/Shaders/CVS/: Entries  Repository
gnubg/boards/CVS/: Repository
gnubg/cmake/CVS/: Repository
gnubg/doc/: ChangeLog  Makefile.am  Makefile.in  allabout.xml  gnubgdb.xml  gnubgman.xml  makehyper.6  version.texi
gnubg/doc/CVS/: Entries  Repository
gnubg/doc/gnubg/: allabout.html  gnubg.6  gnubg.html  gnubg.info  gnubg.texi
gnubg/doc/gnubg/CVS/: Entries  Repository
gnubg/doc/images/CVS/: Entries  Repository
gnubg/ext/: Makefile.in
gnubg/ext/CVS/: Repository
gnubg/flags/: Makefile.am
gnubg/flags/CVS/: Entries  Repository
gnubg/fonts/: Makefile.am
gnubg/fonts/CVS/: Entries  Repository
gnubg/html-images/CVS/: Repository
gnubg/intl/CVS/: Repository
gnubg/lib/: ChangeLog  Makefile.am  Makefile.in  SFMT-params.h  SFMT.c  SFMT.h  cache.c  cache.h  gnubg-types.h  inputs.c  isaac.c  isaac.h  isaacs.h  list.c  list.h  md5.c  md5.h  mm_malloc.h  mt19937ar.c  mt19937ar.h  neuralnet.c  neuralnet.h  neuralnetsse.c  output.c  sigmoid.h  simd.h
gnubg/lib/CVS/: Entries  Repository
gnubg/m4/: ChangeLog  Makefile.am  Makefile.in  ax_ext.m4  ax_gcc_x86_avx_xgetbv.m4  ax_gcc_x86_cpuid.m4  ax_python_devel.m4  az_python.m4
gnubg/m4/CVS/: Entries  Repository
gnubg/met/: ChangeLog  Kazaross-XG2.xml  Makefile.am  Makefile.in  Rockwell-Kazaross.xml  catalog.dtd  catalog.xml  cubeless.xml  g11.xml  jac050.xml  jac100.xml  jacobs.xml  mec.xml  mec26.xml  met.dtd  met.xsl  ortega.xml  snowie.xml  woolsey.xml  zadeh.xml
gnubg/met/CVS/: Entries  Repository
gnubg/msdev/CVS/: Repository
gnubg/non-src/: AUTHORS  Makefile.am  README  cglm.shar  copying.c  credits.c  external_l.c  external_y.c  external_y.h  gnubg-stock-pixbufs.h  sgf_l.c  sgf_y.c  sgf_y.h
gnubg/non-src/CVS/: Entries  Repository
gnubg/pixmaps/: .cvsignore  Makefile.am
gnubg/pixmaps/16x16/CVS/: Repository
gnubg/pixmaps/16x16/actions/CVS/: Entries  Repository
gnubg/pixmaps/24x24/CVS/: Repository
gnubg/pixmaps/24x24/actions/CVS/: Entries  Repository
gnubg/pixmaps/CVS/: Entries  Repository
gnubg/pixmaps/icons/CVS/: Repository
gnubg/pixmaps/icons/hicolor/16x16/CVS/: Repository
gnubg/pixmaps/icons/hicolor/16x16/apps/CVS/: Entries  Repository
gnubg/pixmaps/icons/hicolor/22x22/CVS/: Repository
gnubg/pixmaps/icons/hicolor/22x22/apps/CVS/: Repository
gnubg/pixmaps/icons/hicolor/24x24/CVS/: Repository
gnubg/pixmaps/icons/hicolor/32x32/CVS/: Repository
gnubg/pixmaps/icons/hicolor/48x48/CVS/: Repository
gnubg/pixmaps/icons/hicolor/CVS/: Repository
gnubg/pixmaps/scalable/CVS/: Repository  Root
gnubg/pixmaps/scalable/actions/CVS/: Entries  Repository
gnubg/po/: ChangeLog  Makefile.in.in  POTFILES.in  README.cs  README.ru  cs.po  da.po  de.po  el.po  en_GB.po  en_US.po  es.po  fi.po  fr.po  gnubg.pot  is.po  it.po  ja.po  ro.po  ru.po  tr.po
gnubg/po/CVS/: Entries  Repository
gnubg/po/gnubg-langs/: README  __catstatus.php  __config.php  translations.php  transtable.php
gnubg/po/gnubg-langs/CVS/: Entries  Repository
gnubg/scripts/: Makefile.am  batch.py  batch_win.py  database.py  db_import.py  gnubg.py  matchseries.py  query_player.sh
gnubg/scripts/CVS/: Entries  Repository
gnubg/sounds/: Makefile.am  Makefile.in
gnubg/sounds/CVS/: Entries  Repository
gnubg/textures/: Makefile.am
gnubg/textures/CVS/: Entries  Repository
gnubg/win32/: Makefile.am
gnubg/win32/CVS/: Entries  Repository
gnubg/xpm/: Makefile.in
gnubg/xpm/CVS/: Entries  Repository
version/: version.txt
(+10 files in other folders)
