INCLUDES = -I$(srcdir)/../gnubg
noinst_LTLIBRARIES = libanalyze.la
libanalyze_la_SOURCES = bm.cc danalyze.cc analyze.cc player.cc equities.cc bms.cc mec.cc dice_gen.cc analyze.h bgdefs.h bm.h bms.h danalyze.h defs.h dice_gen.h equities.h ../gnubg/eval.h mec.h minmax.h misc.h ../gnubg/mt19937int.h ../gnubg/osr.h player.h ../gnubg/positionid.h
