INCLUDES=-I$(srcdir)/lib
noinst_LTLIBRARIES = libgnubg.la
libgnubg_la_SOURCES = bearoffdb.c bearoffdb.h bearoffgammon.cc bearoffgammon.h eggmoveg.c eval.c eval.h inputs.c inputs.h mt19937int.c mt19937int.h osr.cc osr.h positionid.c positionid.h pub_eval.c racebg.cc racebg.h lib/neuralnet.h lib/cache.h lib/hash.h
