# Copyright (C) 2006 Christian Anthon <anthon@kiku.dk>

# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

#
# $Id: Makefile.am,v 1.3 2019/09/15 17:54:57 plm Exp $
# 

fontsdir = $(pkgdatadir)/fonts
fontfiles = COPYRIGHT.TXT.gz VeraBd.ttf VeraSeBd.ttf Vera.ttf
fonts_DATA = $(fontfiles)
EXTRA_DIST = $(fontfiles)
