# $Id$

EXTRA_DIST = ax_python_devel.m4 codeset.m4 gettext.m4 glibc21.m4 iconv.m4 lcmessage.m4 progtest.m4 versioncompare.m4 libcurl.m4 \
             ax_check_compile_flag.m4  ax_gcc_x86_cpuid.m4 ax_ext.m4 ax_gcc_builtin.m4 ax_gcc_x86_avx_xgetbv.m4 ax_append_flag.m4 ax_c___attribute__.m4 ax_gcc_func_attribute.m4 \
             ax_append_link_flags.m4 ax_check_link_flag.m4 ax_require_defined.m4
