# Copyright (C) 2002-2004 Joern Thyssen <jth@gnubg.org>
# Copyright (C) 2006-2018 the AUTHORS

# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

#
# $Id: Makefile.am,v 1.25 2023/12/09 21:35:28 plm Exp $
#

EXTRA_DIST = ax_python_devel.m4 codeset.m4 gettext.m4 glibc21.m4 iconv.m4 lcmessage.m4 progtest.m4 versioncompare.m4 libcurl.m4 \
             ax_check_compile_flag.m4  ax_gcc_x86_cpuid.m4 ax_ext.m4 ax_gcc_builtin.m4 ax_gcc_x86_avx_xgetbv.m4 ax_append_flag.m4 ax_c___attribute__.m4 ax_gcc_func_attribute.m4 \
             ax_append_link_flags.m4 ax_check_link_flag.m4 ax_require_defined.m4 ax_build_date_epoch.m4 ax_prog_flex_version.m4 ax_compare_version.m4
