# Copyright (C) 2002 Gary Wong <gtw@gnu.org>
# Copyright (C) 2004-2013 the AUTHORS

# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

#
# $Id: Makefile.am,v 1.9 2023/10/18 21:33:42 plm Exp $
# 

metfiles = catalog.xml catalog.dtd met.dtd met.xsl README \
	g11.xml jac050.xml jac100.xml jacobs.xml \
	mec.xml  mec26.xml ortega.xml Rockwell-Kazaross.xml snowie.xml \
	woolsey.xml zadeh.xml Kazaross-XG2.xml cubeless.xml
metdir = $(pkgdatadir)/met
met_DATA = $(metfiles)
EXTRA_DIST = $(metfiles)

