# Copyright (C) 2006-2008 Christian Anthon <anthon@kiku.dk>
# Copyright (C) 2011-2013 the AUTHORS

# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

#
# $Id: Makefile.am,v 1.8 2019/12/08 21:44:10 plm Exp $
# 

nonsrc = copying.c credits.c credits.h AUTHORS external_l.c external_y.c \
	    external_y.h README sgf_l.c sgf_y.c sgf_y.h gnubg-stock-pixbufs.h \
	    cglm.shar
EXTRA_DIST = $(nonsrc)
