# Copyright (C) 2004-2008 the AUTHORS

# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

#
# $Id: Makefile.am,v 1.6 2019/09/15 17:54:57 plm Exp $
# 

scriptfiles= gnubg.py batch.py database.py batch_win.py \
             matchseries.py db_import.py query_player.sh
scriptsdir = $(pkgdatadir)/scripts
scripts_DATA = $(scriptfiles)
EXTRA_DIST = $(scriptfiles)
