# Copyright (C) 2003 Joern Thyssen <jth@gnubg.org>

# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

#
# $Id: $
# 

texturefiles = logo.png alder.png ash.png berch.png \
		felt.png hinge.png hinge2.png maple.png marble.png oak.png \
		pine.png pine2.png redwood.png stain.png suede.png swirl.png \
		Grass01.png wavesand01.png Water01.png EarthSand01.png \
		wood.png checkered.png
texturesdir = $(pkgdatadir)/textures
textures_DATA = $(texturefiles)
EXTRA_DIST = $(texturefiles)

